; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/i2c/extr_i2c.c_snd_i2c_bit_send.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/i2c/extr_i2c.c_snd_i2c_bit_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_i2c_bus = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_i2c_bus*, i32)* @snd_i2c_bit_send to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_i2c_bit_send(%struct.snd_i2c_bus* %0, i32 %1) #0 {
  %3 = alloca %struct.snd_i2c_bus*, align 8
  %4 = alloca i32, align 4
  store %struct.snd_i2c_bus* %0, %struct.snd_i2c_bus** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.snd_i2c_bus*, %struct.snd_i2c_bus** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @snd_i2c_bit_set(%struct.snd_i2c_bus* %5, i32 0, i32 %6)
  %8 = load %struct.snd_i2c_bus*, %struct.snd_i2c_bus** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @snd_i2c_bit_set(%struct.snd_i2c_bus* %8, i32 1, i32 %9)
  %11 = load %struct.snd_i2c_bus*, %struct.snd_i2c_bus** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @snd_i2c_bit_set(%struct.snd_i2c_bus* %11, i32 0, i32 %12)
  ret void
}

declare dso_local i32 @snd_i2c_bit_set(%struct.snd_i2c_bus*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
